--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <!-- Jumbotron Header -->
         <header class="jumbotron hero-spacer">
             <h1>A Warm Welcome!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, ipsam, eligendi, in quo sunt possimus non incidunt odit vero aliquid similique quaerat nam nobis illo aspernatur vitae fugiat numquam repellat.</p>
+            <p>These website can help consumers to buy there gadgets, appliances and other products that you need .</p>
             <p><a class="btn btn-primary btn-large">Call to action!</a>
             </p>
         </header>
@@ -76,7 +76,7 @@
         <!-- Title -->
         <div class="row">
             <div class="col-lg-12">
-                <h3>Latest Features</h3>
+                <h3>Feature Label</h3>
             </div>
         </div>
         <!-- /.row -->
@@ -88,8 +88,8 @@
                 <div class="thumbnail">
                     <img src="http://placehold.it/800x500" alt="">
                     <div class="caption">
-                        <h3>Feature Label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h3>Sonny Experia</h3>
+                        <p>Xperia XZ is packed with state-of-the-art camera, video and audio. It boasts a photo-pro camera, Smooth and steady video with clear stereo sound. All delivered in a stunning, evolved design.</p>
                         <p>
                             <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
                         </p>
@@ -101,8 +101,8 @@
                 <div class="thumbnail">
                     <img src="http://placehold.it/800x500" alt="">
                     <div class="caption">
-                        <h3>Feature Label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h3>Sony Laptop</h3>
+                        <p>Sony dropped a couple of spots this year, going from fourth to sixth place. That puts this brand right between Sasmung and Dell. On the plus side, Sony’s designs continue to impress, with premium materials and clean lines. Sony also won our Tech Support Showdown. However, the brand’s first Windows 8 slider was a bust, and no Sony system earned an Editors’ Choice Award. </p>
                         <p>
                             <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
                         </p>
@@ -114,8 +114,8 @@
                 <div class="thumbnail">
                     <img src="http://placehold.it/800x500" alt="">
                     <div class="caption">
-                        <h3>Feature Label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h3>Sony Tablet</h3>
+                        <p>These tablet is a 10.1" ultra-bright 2K display, qualcomm® Snapdragon™ 810 processor and super-slim and light</p>
                         <p>
                             <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
                         </p>
@@ -127,8 +127,8 @@
                 <div class="thumbnail">
                     <img src="http://placehold.it/800x500" alt="">
                     <div class="caption">
-                        <h3>Feature Label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h3>Sony Headset</h3>
+                        <p>Soft synthetic leather on the housing and earpads give a luxurious look and feel. Designed to fit securely over your ears for hours of comfortable listening.</p>
                         <p>
                             <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
                         </p>
@@ -145,7 +145,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; My Website 201</p>
                 </div>
             </div>
         </footer>
