--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src="http://placehold.it/800x500" alt="">
+                    <img src="cellphone.PNG" alt="">
                     <div class="caption">
                         <h3>Sonny Experia</h3>
                         <p>Xperia XZ is packed with state-of-the-art camera, video and audio. It boasts a photo-pro camera, Smooth and steady video with clear stereo sound. All delivered in a stunning, evolved design.</p>
