--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <!-- Title -->
         <div class="row">
             <div class="col-lg-12">
-                <h3>Feature Label</h3>
+                <h3>Sony Gadgets</h3>
             </div>
         </div>
         <!-- /.row -->
@@ -99,7 +99,7 @@
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src="http://placehold.it/800x500" alt="">
+                    <img src="laptops.JPG" alt="">
                     <div class="caption">
                         <h3>Sony Laptop</h3>
                         <p>Sony dropped a couple of spots this year, going from fourth to sixth place. That puts this brand right between Sasmung and Dell. On the plus side, Sony’s designs continue to impress, with premium materials and clean lines. Sony also won our Tech Support Showdown. However, the brand’s first Windows 8 slider was a bust, and no Sony system earned an Editors’ Choice Award. </p>
@@ -112,7 +112,7 @@
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src="http://placehold.it/800x500" alt="">
+                    <img src="tablets.PNG" alt="">
                     <div class="caption">
                         <h3>Sony Tablet</h3>
                         <p>These tablet is a 10.1" ultra-bright 2K display, qualcomm® Snapdragon™ 810 processor and super-slim and light</p>
@@ -125,7 +125,7 @@
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src="http://placehold.it/800x500" alt="">
+                    <img src="" alt="">
                     <div class="caption">
                         <h3>Sony Headset</h3>
                         <p>Soft synthetic leather on the housing and earpads give a luxurious look and feel. Designed to fit securely over your ears for hours of comfortable listening.</p>
