--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src="" alt="headsets.JPG">
+                    <img src="headsets.JPG" alt="">
                     <div class="caption">
                         <h3>Sony Headset</h3>
                         <p>Soft synthetic leather on the housing and earpads give a luxurious look and feel. Designed to fit securely over your ears for hours of comfortable listening.</p>
