--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="thumbnail">
                     <img src="cellphone.PNG" alt="">
                     <div class="caption">
-                        <h3>Sonny Experia</h3>
+                        <h3>Sony Experia</h3>
                         <p>Xperia XZ is packed with state-of-the-art camera, video and audio. It boasts a photo-pro camera, Smooth and steady video with clear stereo sound. All delivered in a stunning, evolved design.</p>
                         <p>
                             <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
